attempt to add date

--- a/_posts/2016-01-11-test-post.md
+++ b/_posts/2016-01-11-test-post.md
@@ -4,7 +4,7 @@ title: Test Post
 meta: test post
 source: http://www.datadrivenjournalism.ru/
 category: test
-post.post_author: ansakoy
+post_author: ansakoy
 ---
 
 # Test Post
